# cfc

./: .clang-format  .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  DESIGN.md  Doxyfile  FBO.h  README.md  RunExample  cfc.h  run  soyalib.h
cmake/: FetchDependencies.cmake
examples/: 01-basics.c  02-basic-drawing.c  03-particles.c  04-data-structures.c  05-fragment-shader.c  06-framebuffer.c  3d-drawing.c  CMakeLists.txt  RunExample  basic-drawing.c  basics.c  callbacks.c  camera.c  clear.c  data-structures.c  extras-lockfreequeue.c  extras-lockfreequeue.h  extras-pipeencoder.c  extras-recorder.c  fragment-shader.c  fragmentShader.c  framebuffer.c  particles.c  sysl.c  triangle.c  vectors.c
examples/resources/: example05.frag  framebuffer.frag
extras/: lockfreequeue.h  pipeencoder.h  soya_recorder.h
resources/: fragmentShader.glsl
soya/: app.h  callbacks.h  color.h  defaults.h  main.h  math.h  renderer.h  shader.h  soya.h  soyacolor.h  soyalib.h  soyamath.h  soyatypedefs.h  vec.h
soya/core/: app.h  callbacks.h  camera.h  core.h  defaults.h  defaultshaders.h  fbo.h  gl.h  graphics.h  renderer.h  rendering.h  shader.h
soya/extras/: geometry.h  glslsnippets.h  lockfreequeue.h  pipeencoder.h  polyline.h  preprocessor.h  screenshot.h
soya/glad/: glad.c  glad.h
soya/lib/: color.h  gl.h  io.h  lib.h  math.h  preprocessor.h  sl.h  vec.h
test/: CMakeLists.txt  RunTests  common.h  preprocessor.c  runner.c  test_color.h  test_vec.h  tests.h  vec.c
test/resources/: basic.frag  comment.frag  commentedInclude.glsl  doubleHash.glsl  doubleInclude.glsl  hash.glsl  singleinclude.frag
